# nar-cardest

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
benchmark/: dmv-synthetic2000-1234.csv  flight-delays-synthetic2000-1234.csv
cardest/: common.py  datasets.py  estimators.py  models.py  parse.py  run.py
models/mlp-ur-dmv/: nar-mlp-dmv-universal.json
models/mlp-ur-imdb/: nar-mlp-imdb-imdb-universal.json
models/mlp-ur-imdb-jl/: nar-mlp-imdb-job-light-imdb-job-light-universal.json
models/trm-ur-dmv/: nar-trm-dmv-dmv-universal.json  nar-trm-dmv-dmv-universal.pt
models/trm-ur-imdb/: nar-trm-imdb-imdb-universal.json
models/trm-ur-imdb-jl/: nar-trm-imdb-job-light-imdb-job-light-universal.json
scripts/: download_dmv.sh  download_imdb.sh
