[tool.poetry]
name = "cardest"
version = "0.1.0"
description = ""
authors = ["Ryuichi Ito <ito.ryuichi@ist.osaka-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.19.3"
pandas = "1.2.4"
torch = "1.8.1"
scipy = "1.4.1"
sqlparse = "0.4.1"
pyarrow = "7.0.0"
networkx = "2.5"
matplotlib = "^3.4.2"
ipywidgets = "^7.6.3"
IProgress = "^0.4"
sklearn = "^0.0"
nbconvert = "^6.0.7"
hypernetx = "^1.2"
celluloid = "^0.2.0"
igraph = "^0.9.8"
wandb = "^0.12.9"
pytorch-lightning = "1.4.9"
ray = {extras = ["tune"], version = "^1.9.2"}
optuna = "^2.10.0"
aioredis = "^2.0.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.9.1"
pytorch_memlab = "0.2.2"
memory_profiler = "0.58.0"
line_profiler = "3.1.0"

[build-system]
requires = ["poetry-core> = 1.0.0"]
build-backend = "poetry.core.masonry.api"
